--- a/style.css
+++ b/style.css
@@ -6,21 +6,67 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  height: 60vh;
+}
+
+header {
+  background-color: hsla(0, 100%, 25%, 0.87);
+  color: white;
+  border-radius: 4px;
+  padding-inline: 1rem;
+  margin-bottom: 1rem;
 }
 
 form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: .5rem;
+  border: 2px hsla(0, 100%, 25%, 0.7) solid;
+  border-radius: 6px;
+}
+article:nth-child(1),
+article:nth-child(3) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 100%;
+  padding: .7rem;
+  flex-direction: row;
+  background-color: hsla(0, 100%, 25%, 0.7);
+  color: white;
+  gap: .2rem;
 }
 
-div:last-child {
+article:nth-child(2) {
   display: flex;
-  margin-top: 1.5rem;
+  align-items: center;
+  padding: .3rem .7rem;
+  flex-direction: column;
+  gap: .2rem;
+}
+
+article:last-child {
+  display: flex;
   gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  padding: .3rem .7rem .7rem;
 }
 
 button {
-  padding: .3rem .7rem;
+  padding: .5rem 1rem;
+  background-color: hsla(0, 100%, 25%);
+  color: white;
+  border: 1px hsla(0, 100%, 25%) solid;
+  border-radius: 4px;
+  transition: 300ms ease;
+}
+button:hover {
+  color: hsla(0, 100%, 25%);
+  border: 1px hsla(0, 100%, 25%) solid;
+  background-color: white;
+  transform: scale(1.10);
 }
